--- a/docs/博客搭建/VitePress/01.前言.md
+++ b/docs/博客搭建/VitePress/01.前言.md
@@ -24,7 +24,7 @@ title: vitepress搭建并部署网站
 到最后遇到问题你只能提issue，这个时候就得看负责维护这个项目团队的积极性了，vitepress团队还是很奈斯的，
 我今天两点提了个issue8分钟就回复了，也得益于美国跟咱这边有时差。
 
-[//]: # (![issue]&#40;/docs/public/blog1.png&#41;)
+![blog1.png](https://img.picui.cn/free/2024/09/07/66dc622602976.png)
 
 ## 为什么选用了VitePress
 
