--- a/docs/博客搭建/VitePress/01.前言.md
+++ b/docs/博客搭建/VitePress/01.前言.md
@@ -26,8 +26,38 @@ title: vitepress搭建并部署网站
 
 ![blog1.png](https://img.picui.cn/free/2024/09/07/66dc622602976.png)
 
-## 为什么选用了VitePress
+## 创建项目
 
+话不多说，接下来开始我们的搭建步骤。对于开源项目，肯定是直接看官网和一些最佳实践了。
+
+vitepress官网地址: <https://vitepress.dev/>
+
+模仿的最佳实践（B站一个UP主的）：<https://docs.zhengxinonly.com/>
+
+**安装vitepress**
+
+首先新建文件夹，打开cmd窗口
+
+```pnpm
+pnpm add -D vitepress
+
+```
+
+**初始化Vitepress**
+
+```pnpm
+    pnpm vitepress init
+```
+
+这是我的配置，简单介绍一下
+
+* 第一个是在当前根目录下创建vitepress项目
+* 站点标题和描述。后续可以在配置中改
+* 主题，建议选择第二个，个人觉得比较好看
+* 主题，建议选择第二个，个人觉得比较好看
+* 是否添加脚本到package.json，这个还是需要的，启动命令，打包命令这些都得用
+
+![package.json](https://img.picui.cn/free/2024/09/07/66dc6b270c35a.png)
 ## VitePress介绍
 
 ## 安装前的准备
