--- a/docs/博客搭建/VitePress/02.创建项目.md
+++ b/docs/博客搭建/VitePress/02.创建项目.md
@@ -4,7 +4,7 @@ title: 创建项目 <Badge type="tip" text="^1.9.0" />
 
 # 创建项目 <Badge type="tip" text="^1.9.0" />
 
-**安装vitepress**
+## 安装vitepress
 
 首先新建文件夹，打开cmd窗口
 
@@ -13,13 +13,13 @@ pnpm add -D vitepress
 
 ```
 
-**初始化Vitepress**
+## 初始化Vitepress
 
 ```pnpm
     pnpm vitepress init
 ```
 
-这是我的配置，简单介绍一下
+### 这是我的配置，简单介绍一下
 
 * 第一个是在当前根目录下创建vitepress项目
 * 站点标题和描述。后续可以在配置中改
@@ -41,12 +41,12 @@ pnpm add -D vitepress
 
 ![blog3.png](https://img.picui.cn/free/2024/09/07/66dc6e0708d23.png)
 
-启动项目
+## 启动项目
 
 ```pnpm
  pnpm run docs:dev
 ```
-打开，看到这个，说明初始话成功
+### 打开，看到这个，说明初始话成功
 
 ![blog4.png](https://img.picui.cn/free/2024/09/07/66dc6e371acbc.png)
 
