--- a/docs/博客搭建/VitePress/03.自定义配置.md
+++ b/docs/博客搭建/VitePress/03.自定义配置.md
@@ -2,16 +2,14 @@
 title: 自定义配置
 ---
 
-# 【首页设置】关于index.md的设置 <Badge type="tip" text="^1.9.0" />
+# 自定义配置 <Badge type="tip" text="^1.9.0" />
 
-## 主页配置
+## 美化主题
 
-## Hero部分配制
+对于主页，我们自定义的内容有哪些? 如图下， `8个可以自定义。接下来就一一叙述这8个地方怎么自定义的。`
 
-## Features部分的配置
+![blog5.png](https://img.picui.cn/free/2024/09/08/66dd4f26633ae.png)
 
-## 增加Markdown内容
+忘记了还有一个页脚：
 
-## 自定义name颜色
-
-## AI总结内容
+![blog6.png](https://img.picui.cn/free/2024/09/08/66dd4f8c78f8d.png)
