--- a/docs/博客搭建/VitePress/04.美化主页.md
+++ b/docs/博客搭建/VitePress/04.美化主页.md
@@ -4,12 +4,49 @@ title: 美化主页
 
 # 美化主页 <Badge type="tip" text="^1.9.0" />
 
-## 设置独立的文档目录
+## 9这个直接配置footer, 在 `config.mjs defineConfig themeConfig` , 版权可以换成自己的网名,下面配置就可以了
 
-## 导航栏Nav基本设置
+```ts
+// 首页页脚
+footer: {
+    copyright: '姜小鱼版权所有 © 2023-2024 创作不易请尊重他人劳动成果，未经授权禁止转载！'
+}
+```
 
-## 自定义Nav激活状态
+2-4 是在 `index.md`这文件中自定义的，简单介绍一下对应的关系
 
-## 自定义Nav的target和rel属性
+`name=>2` `text=>3` `tagline=>4` `actions=>5` `features=>6`
 
-## 把Nav独立出来
+## 需要说明是，对于5个这两个按钮，是可以跳转，**link指定路径**, 比如/api-example就是在项目目录下找api-example这个文件
+
+```markdown
+# https://vitepress.dev/reference/default-theme-home-page
+layout: home
+
+hero:
+  name: "Gingesmallfish文档"
+  text: "在线文档"
+  tagline: 关注科技最前沿技术
+  image:
+      src: /505.svg     # text 和 tagline 区域旁的图片
+      alt: plan
+  actions:
+    - theme: brand
+      text: 快速开始
+      link: /基础知识/html/01.基础知识
+    - theme: alt
+      text: 博客搭建
+      link: /博客搭建/VitePress/01.前言
+
+features:
+  - title: 小建议 💡
+    details: 选择永远大于努力
+  - title: 🧗 努力
+    details: 如果做一件事就努力把它做好
+  - title: 🤔 思考
+    details: 学会思考，不要人云亦云
+```
+
+## 修改后的页面如下
+
+![blog7.png](https://img.picui.cn/free/2024/09/08/66dd53bdc2980.png)
