docs确定版本以及部署上线

--- a/docs/博客搭建/VitePress/04.美化主页.md
+++ b/docs/博客搭建/VitePress/04.美化主页.md
@@ -19,7 +19,7 @@ footer: {
 
 ## 需要说明是，对于5个这两个按钮，是可以跳转，**link指定路径**, 比如/api-example就是在项目目录下找api-example这个文件
 
-```markdown
+```yaml
 # https://vitepress.dev/reference/default-theme-home-page
 layout: home
 
@@ -50,3 +50,21 @@ features:
 ## 修改后的页面如下
 
 ![blog7.png](https://img.picui.cn/free/2024/09/08/66dd53bdc2980.png)
+
+![blog15.png](https://img.picui.cn/free/2024/09/08/66ddb8ed31b90.png)
+
+## 点击确定，耐心等待15秒左右，就可以了，接下来查看我们的域名：
+
+![blog16.png](https://img.picui.cn/free/2024/09/08/66ddb91ed06e1.png)
+
+## 踩坑点：为啥下面的没有CSS样式呢？原因是因为没有.nojekyll这个文件，不然一些css会被忽略。添加一下再push就好了
+
+:::warning
+    有些自己网站不需要这一步，有的自己部署就可以访问到自己 `博客`
+:::
+
+![blog17.png](https://img.picui.cn/free/2024/09/08/66ddba039af68.png)
+
+## 最后，就部署完毕了
+
+![blog7.png](https://img.picui.cn/free/2024/09/08/66ddba6af2126.png)
