--- a/docs/博客搭建/VitePress/07.文章页扩展.md
+++ b/docs/博客搭建/VitePress/07.文章页扩展.md
@@ -2,7 +2,7 @@
 title: 文章页扩展
 ---
 
-# 文章页扩展
+# 文章页扩展  <Badge type="tip" text="^1.9.0" />
 
 当然，这样对一些项目的文档是非常合适的。但是如果我们需要记笔记的话有些繁琐，并且三边栏总感觉可以查阅的东西变少了。
 因此可以使用刚才说的自定义样式。将三边栏改成两边栏
