--- a/docs/博客搭建/VitePress/02.创建项目.md
+++ b/docs/博客搭建/VitePress/02.创建项目.md
@@ -8,14 +8,14 @@ title: 创建项目 <Badge type="tip" text="^1.9.0" />
 
 首先新建文件夹，打开cmd窗口
 
-```pnpm
+```bash
 pnpm add -D vitepress
 
 ```
 
 ## 初始化Vitepress
 
-```pnpm
+```bash
     pnpm vitepress init
 ```
 
@@ -43,7 +43,7 @@ pnpm add -D vitepress
 
 ## 启动项目
 
-```pnpm
+```bash
  pnpm run docs:dev
 ```
 ### 打开，看到这个，说明初始话成功
