--- a/docs/博客搭建/VitePress/补充.md
+++ b/docs/博客搭建/VitePress/补充.md
@@ -35,13 +35,9 @@ title: 补充
 ```js
  mermaid: {
     // refer https://mermaid.js.org/config/setup/modules/mermaidAPI.html#mermaidapi-configuration-defaults for options
-}
-,
+},
 mermaidPlugin: {
-    class
-
-:
-    "mermaid my-class", // set additional css classes for parent container
+    class:"mermaid my-class", // set additional css classes for parent container
 }
 ```
 
