--- a/docs/基础知识/html/02.页面结构.md
+++ b/docs/基础知识/html/02.页面结构.md
@@ -202,6 +202,100 @@ HTML5 中使用 `main` 标签表示页面主要区域,一个页面 `main` 元素
 </body>
 ```
 
+## 内容区域
 
+使用 `acricle` 标签规定堵路的自包含内容区域，不要被背单词的表面意义所局限, `article` 标签
+表示一个独立的内容容器
 
+![内容区域](./assets/10gtml.png)
 
+```html
+
+<main>
+    <article>
+        <h2>实现新闻</h2>
+        <ul>
+            <li><a href="">这家引爆ins的奶茶店终于空降南昌, 开放加盟啦!</a></li>
+        </ul>
+    </article>
+</main>
+```
+
+## 区块定义
+ 
+使用 `section` 定义区块，一般是一组相似内容的排列组合
+
+![section](./assets/11html.png)
+
+```html
+<main>
+   <article>
+     <section>
+       <h2>民牌工厂</h2>
+     </section>
+     <section>
+      <h2>事物处理</h2>
+     </section>
+   </article>
+</main>
+```
+
+## 附加区域
+
+使用 `aside` 用于设置与主要区域无关的那日同，比如侧面栏的广告
+
+![aside](./assets/12html.png)
+
+```html
+
+<main>
+    <article>
+        <section>
+            <h2>什么是Vue</h2>
+        </section>
+        <section>
+            <h2>API风格/h2>
+        </section>
+    </article>
+</main>
+```
+## 通用容器
+
+`div` 通用容器标签是较早出现的, 也是被大多数 `程序员`使用最多的容器。 不过我们应该更倾向于
+使用语义的标签 `article/section/aside/nav`
+
+有些区域这些标签对的容器不好表达，这是可以采用 `div` 比如轮播图效果中的内容。
+
+![通用容器](./assets/13html.png)
+
+```html
+
+<div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">京东</a></li>
+                <li><a href="">我的购物</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <article>
+            <section>
+                <h2>事物处理</h2>
+            </section>
+        </article>
+        <aside>
+            <h2>活动</h2>
+            <p>分享、自由的技术交流社区。</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>
+            我们的使命:传播互联网前沿技术，帮助更多的人实现梦想
+        </p>
+    </footer>
+</div>
+```
