style:字体改动以文本相关的内容跟新

--- a/docs/基础知识/html/04.文本相关.md
+++ b/docs/基础知识/html/04.文本相关.md
@@ -3,3 +3,33 @@ title: 文本相关
 ---
 
 # 文本相关
+
+## 基本标签
+
+### p
+
+`p` 标签标记一个段落内容
+
+```html
+<p>
+    录制视频是一个很费时的工作,我们希望大家可以互相帮助提升技术，而不是直接简单的获取答案。
+</p>
+```
+
+### pre
+
+原样显示文本内容包括空白，换行等
+
+```html
+
+<pre>
+    这是pre标签的显示效果
+            这是换行后的内容，空白和换行都会保留
+</pre>
+```
+
+### br
+在 `html` 中回车是忽悠，使用 `br` 标签可以实现换行效果
+
+### span
+`span` 标签与 `div` 标签是没有语义的, `span` 常用于对某写文档特征控制, 该文本又没有适合的语义标签。 `就比如评论这些`
