--- a/docs/基础知识/html/04.文本相关.md
+++ b/docs/基础知识/html/04.文本相关.md
@@ -33,3 +33,74 @@ title: 文本相关
 
 ### span
 `span` 标签与 `div` 标签是没有语义的, `span` 常用于对某写文档特征控制, 该文本又没有适合的语义标签。 `就比如评论这些`
+
+
+## 描述文本
+
+`samll` 用于设置描述 ，声明等文本
+
+```html
+<samll> 半年付 </samll>
+```
+
+### time
+
+标签定义日期或时间，或者两者
+
+```html
+<time>2019-02-03</time>
+```
+
+### addr
+
+`abbr` 标签用于描述一个缩写内容
+
+**在WWW上，每一信资源都有统一的且在网上唯一的地址，该地址就叫URL统一资源定位符**
+
+```yaml
+在WWW上，每一信息资源都有统一的且在网上唯一的地址，该地址就叫 <abbr title="Uniform Resource Locator">URL</abbr> 统一资源定位符。
+```
+
+### sub
+
+用于数字的下标内容
+
+```html
+水的化学为H<sub>2</sub>O
+```
+### 水的化学为H<sub>2</sub>O
+
+### SUP
+用于数字的上标内容
+
+### 请计算5 <sup>2</sup> 平方
+
+```html
+请计算5 <sup>2</sup> 平方
+```
+
+### del 
+`del` 标签表示删除的内容, `ins` 一般与 `del` 标签配合使用描述更新与修正。
+
+```html
+原价 <del>200元</del> 现价 <ins>100元</ins>
+```
+
+
+### s
+`s` 标签显示效果 `del` 相识, 但语义用来定义哪些不正确，不标准或者没有用的文本
+
+```html
+<s>A 太阳是方的</s> <br>
+B 地球是圆的
+
+```
+
+### progress
+用来表示完成任务的进度，当浏览器不支持时就是就会显示内容
+
+<progress value="60" max="100">完成60%</progress>
+
+```html
+<progress value="60" max="100">完成60%</progress>
+```
