--- a/docs/博客搭建/VitePress/补充.md
+++ b/docs/博客搭建/VitePress/补充.md
@@ -37,7 +37,7 @@ title: 补充
     // refer https://mermaid.js.org/config/setup/modules/mermaidAPI.html#mermaidapi-configuration-defaults for options
 },
 mermaidPlugin: {
-    class:"mermaid my-class", // set additional css classes for parent container
+    class:"mermaid my-class", // set additional CSS classes for parent container
 }
 ```
 
