--- a/docs/基础知识/html/04.文本相关.md
+++ b/docs/基础知识/html/04.文本相关.md
@@ -104,3 +104,65 @@ B 地球是圆的
 ```html
 <progress value="60" max="100">完成60%</progress>
 ```
+
+## 强调文本
+
+### strong
+
+`strong` 标签和 `em` 一样, 用于强调文本，但是他们的的强调程度不同
+
+```html
+
+<strong>在线文档</strong>专注WEB技术，不但跟新<em>文档</em>
+
+```
+
+### mark
+
+用于突出显示文本内容，类似我们生活中使用的马克笔
+
+
+```html
+
+请认真学习在线文档<mark>PHP</mark>, <mark>JavaScript</mark>
+
+```
+
+## 应用标签
+
+`cite` 标签通常表示它所包含的文本对某个参考文献的引用，或文章作者的名字
+
+```html
+最新般httml文档已更新 <cite>姜小鱼</cite>
+```
+
+### blockquote
+
+`blockquote` 用来定义摘自另一个源的快引用
+
+```html
+下而是来自某一个大叔，对失败的认知
+<blockquote cite="https://gingesmallfish.github.io/docs-demo/">
+	在坚持的人面前，失败终将被踏过。
+</blockquote>
+```
+
+### q
+
+`q` 用于表示行内应用文本，在大部分浏览器中会加上引号
+
+```html
+<q>HTML开启WEB征途</q> 已经发布了
+```
+
+## 联系信息
+
+### address
+
+用于设置联系地址等信息， 也就是 `footer` **&** 一般将 `address`放在 `footer` 标签中
+
+```html
+<address>
+	感谢您提交建议到 XXXXXXXXXX@qq.com
+</address>
+```
