--- a/docs/基础知识/html/03.链接与图片.md
+++ b/docs/基础知识/html/03.链接与图片.md
@@ -3,3 +3,27 @@ title: 链接与图片
 ---
 
 # 链接与图片
+
+## 图片处理
+
+### 图像格式
+
+* 网络带宽成本很高，图片处理在保证用户体验好的前提下，文件尺寸也要尽可能小
+* 图片属性静态文件，不要放在 WEB 服务器上，而放在云储存服务器上并使用 CDN 加速
+* 以 JPEG 类型优先使用，文件尺寸更小
+* 小图片使用 PNG，清晰度更高，因为文件尺寸小，文件也不会太大
+* 网页图标建议使用 css 字体构建如 [iconfont](https://www.iconfont.cn/) 或 [fontawesome](https://fontawesome.com/)
+
+| 格式  |                  说明                   | 透明 |
+|:---:|:-------------------------------------:|----|
+| PNG | 无损压缩格式，适合图标、验证码等。有些小图标建议使用 css 字体构建。  | 支持 |
+| GIF |       256 色，可以产生动画效果（即 GIF 动图）        | 支持 |
+| JPEG |          有损压缩的类型，如商品、文章的图片展示          | 支持 |
+
+一般的网站标志都是用 `png` 类型, 这样图片比较大使用清晰，同时有透明色，当页面底色改变时也不需要修改图片。 比图我的网站的 `图标`
+
+![logo](./assets/14html.png)
+
+下面图片建议使用jpeg ，因为图片比较大使用 `png` 会造成文件过大，使用`jpeg`后尺寸不大而且清晰度也可以接受。
+
+![页面结构](./assets/05html.png)
