--- a/docs/基础知识/html/03.链接与图片.md
+++ b/docs/基础知识/html/03.链接与图片.md
@@ -27,3 +27,60 @@ title: 链接与图片
 下面图片建议使用jpeg ，因为图片比较大使用 `png` 会造成文件过大，使用`jpeg`后尺寸不大而且清晰度也可以接受。
 
 ![页面结构](./assets/05html.png)
+
+
+## 网页链接
+
+图片也有其他格式 `jpg/png/svg` 这个 `jpeg`格式也是跟jgp格式一样除了, `svg`不一样之外，其他长不多
+
+|   属性   |             说明             |
+|:------:|:--------------------------:|
+|  href  |            跳转地址            |
+| target | _blank 新窗口 打开 _self 当前窗口打开 |
+| title  |           链接提示文本           |
+
+
+###  打开窗口
+
+下面设置 `target` 属性 在指定窗口打开 
+
+```html
+<a href="https://gingesmallfish.github.io/docs-demo/" target="hdcms">
+        在IFRAME中打开
+</a>
+<script>
+	window.open('https://gingesmallfish.github.io/docs-demo/', '姜小鱼');
+</script>
+```
+
+### 锚点链接
+
+锚点课试着跳转到页面中的某个部分
+1. 为元素添加 `id` 属性来设置锚点
+2. 设置 `a` 标签的  `href` 属性
+3. ```html
+    <a href="#comment-1">跳转到评论区</a>
+    <div style="height: 1000px;"></div>
+
+    <div id="comment-1" style="background: green;">
+	跳回在先文档
+    </div>
+    ```
+4. 也可以跳转到不同页面的描点
+    ```html
+    <a href="article.html#comment-1">跳转到评论区</a>
+
+    ```
+### 邮箱链接
+出了页面跳转外可以指定其他链接，使用一下方式也有缺点，邮箱可能会被恶意用户采集到， 所以有些用户使用 `gingesmallfish.github.io` 然后提示用户 `请将#改为@后发送邮件` 的提示形式
+
+```html
+<a href="mailto:2300071698@qq.com">我的邮箱</a>
+```
+### 拨打电话
+点击以下链接后，手机会询问用户是否拨打电话。
+
+```html
+<a href="tel:99999999999">联系客服</a>
+```
+## 完
