--- a/docs/基础知识/html/05.表单与列表.md
+++ b/docs/基础知识/html/05.表单与列表.md
@@ -3,3 +3,105 @@ title: 表单与列表
 ---
 
 # 表单与列表
+
+## 表单
+
+表单 是服务收集用户数据的方式
+
+### FROM
+
+一般情况下表单项要放在 `FROM` 内容提交
+
+```html
+
+<from action="form.php" method="post">
+    <fieldset>
+        <legend>测试</legend>
+        <input type="text">
+    </fieldset>
+</from>
+```
+
+|   属性   |         说明          |
+|:------:|:-------------------:|
+| action |        后台地址         |
+| method | 提交方式 `GET` 或 `POST` |
+
+### LABEL
+
+使用 `label`  用于描述表单标题, 当点击标题后文本框会获得焦点，需要保证使用的`ID` 在 页面中是唯一的
+
+```html
+
+<form action="form.php" method="POST" novalidate>
+    <label for="title">标题</label>
+    <input type="text" name="title" id="title">
+</form>
+```
+
+> 也可以将文本框放在 `label `标签内部，这样就不需要设置 `id `与 `for` 属性了
+
+### INPUT
+
+文本框用于输入单行文本使用，下面是常用属性鱼 `示例`
+
+|     属性      |                            说明                            |
+|:-----------:|:--------------------------------------------------------:|
+|   `type`    |                      表单类型默认为`text`                       |
+|    name     |                         后台接收字段名                          |
+|  required   |                           必循输入                           |
+| placeholder |                          提示文本内容                          |
+|    value    |                           默认值                            |
+|  maxlength  |                        允许最大输入默认字符                        |
+|    size     |                 表单显示长度，一般用不使用而用 `css` 控制                 |
+|  disabled   |                      禁止使用，不可以提交到后台                       |
+|  readonly   |                        只读，可提交到后台                         |
+|   capture   | 使用麦克风、视频或摄像头哪种方式获取手机上传文件，支持的值有 microphone, video, camera |
+
+
+**基本示例**
+```html
+<form action="form.php" method="POST" novalidate>
+    <fieldset>
+        <legend>文本框</legend>
+        <input type="text" name="title" required placeholder="请输入标题" maxlength="5" value="" size="100"> // [!code focus]
+    </fieldset>
+</form>
+```
+**调取摄像头**
+
+当input类型 为 `file`时手机会让用户选着图片或者拍照，如果想直接调取摄像头使用以下代码
+
+```html
+<input type="file" capture="camera" accept="image/*"/>
+```
+其他类型
+
+通过设置表单 `type`  字段可以只当不懂的输入内容
+
+| 类型       | 说明             |
+|----------|----------------|
+| email    | 输入内容为邮箱        |
+| url      | 输入内容为`URL`地址   |
+| password | 输入内容为密码        |
+| tel      | 电话号，移动端会调出数字键盘 |
+| search   | 搜索框            |
+| hidden   | 隐藏表单           |
+| submit   | 提交表单           |
+
+### 提交表单
+
+创建提交按钮可以将表单数据提交到后台，有多种方式可以提交数据如使用 `AJAX`，或 `HTML` 的表单按钮。
+
+1. 使用 input 构建提交按钮，如果设置了 name 值按钮数据也会提交到后台，如果有多个表单项可以通过些判断是哪个表单提交的。
+
+```html
+<input type="submit" name="submit" value="提交表单">
+```
+2. 使用 button 也可以提交，设置 type 属性为submit 或不设置都可以提交表单。
+
+```html
+<button type="submit">提交表单</button>
+```
+
+## 禁用表单
