docs:以写到列表: 待完

--- a/docs/基础知识/html/05.表单与列表.md
+++ b/docs/基础知识/html/05.表单与列表.md
@@ -104,4 +104,251 @@ title: 表单与列表
 <button type="submit">提交表单</button>
 ```
 
-## 禁用表单
+### 禁用表单
+
+通过为表单设置 `disabled` 或 `readonly` 都可以禁用修改表单，但`readonly` 表单的数据可以提交到后台
+
+```html
+<input type="text" name="web" value="hello world" readonly>
+```
+
+### PATTERN
+
+表单可以通过设置 `pattern` 属性指定正则验证, 也可以使用各种前端验证库如 [formvalidator](https://www.formvalidator.net)
+或 [validator](https://www.npmjs.com/package/validator)
+
+|    属性     |     说明     |
+|:---------:|:----------:|
+|  pattern  | 正则表达式验证规则  |
+| oninvalid | 输入错误时触发的时间 |
+
+```html
+
+<form action="">
+    <input type="text" name="username" pattern="[A-z]{5,20}"
+           oninvalid="validate('请输入5~20位字母的用户名')">
+    <button>提交</button>
+</form>
+
+<script>
+    function validate(message) {
+        alert(message);
+    }
+</script>
+```
+
+### TEXTAREA
+
+文本域是指可以输入多次文本的表单，当然更复杂的情况可以使用编辑器如 `ueditor, ckeditor` 等
+
+|  选项  |        说明         |
+|:----:|:-----------------:|
+| cols | 列字符数(一般使用css控制更好) |
+| rows | 行数 (一般使用css控制更好)  |
+
+<textarea name="content" cols="30" rows="3">在线编辑</textarea>
+
+### SELECT
+
+下拉框项可用多个值中的选择
+
+|    选项    |  说明  |
+|:--------:|:----:|
+| multiple | 支持多选 |
+|   size   | 列表高度 |
+| optgroup | 选项组  |
+| selected | 选中状态 |
+|  option  | 选项值  |
+
+### 案例
+
+<select name="lesson">
+        <option value="">== 选择课程 ==</option>
+        <optgroup label="后台">
+            <option value="php">PHP</option>
+            <option value="linux">LINUX</option>
+            <option value="mysql">MYSQL</option>
+        </optgroup>
+        <optgroup label="前台">
+            <option value="php">HTML</option>
+            <option value="linux">JAVASCRIPT</option>
+            <option value="mysql">CSS</option>
+        </optgroup>
+</select>
+
+:::details 常看源码
+
+```html [源码]
+<select name="lesson">
+    <option value="">== 选择课程 ==</option>
+    <optgroup label="后台">
+        <option value="php">PHP</option>
+        <option value="linux">LINUX</option>
+        <option value="mysql">MYSQL</option>
+    </optgroup>
+    <optgroup label="前台">
+        <option value="php">HTML</option>
+        <option value="linux">JAVASCRIPT</option>
+        <option value="mysql">CSS</option>
+    </optgroup>
+</select>
+```
+
+:::
+
+### RADIO
+
+单选框只能选择一个选项的表单，如性别的选择 `男、女、保密`只能选择一个。
+
+|   选项    |  说明  |
+|:-------:|:----:|
+| checked | 选中状态 |
+
+<input type="radio" name="sex" value="boy" id="boy">
+<label for="boy">男</label>
+
+<input type="radio" name="sex" value="girl" id="girl" checked>
+<label for="girl">女</label>
+
+### CHECKBOX
+
+复选框是指允许选择多个值的表单
+
+<fieldset>
+        <legend>复选框</legend>
+        <input type="checkbox" name="sex" value="boy" id="boy">
+        <label for="boy">PHP</label>
+        <input type="checkbox" name="sex" value="girl" id="girl" checked>
+        <label for="girl">MYSQL</label>
+</fieldset>
+
+:::details 查看源码
+
+```html [源码]
+
+<fieldset>
+    <legend>复选框</legend>
+    <input type="checkbox" name="sex" value="boy" id="boy">
+    <label for="boy">PHP</label>
+
+    <input type="checkbox" name="sex" value="girl" id="girl" checked>
+    <label for="girl">MYSQL</label>
+</fieldset>
+```
+
+:::
+
+### 文件上传
+
+文件上传有多种方式，可以使用插件或 JS 拖放上传处理。HTML 本身也提供了默认上传的功能，只是上传效果并不是很美观。
+
+|    选项    |                    说明                    |
+|:--------:|:----------------------------------------:|
+| multiple |                   支持多选                   |
+|  accept  | 允许上类型`.png,.psd` 或 `image/png,image/gif` |
+
+<form>
+    <fieldset>
+        <input type="file" name="icon" multiple="multiple" accept="image/png,image/gif">
+    </fieldset>
+    <button style="width: 100px; height: 50px; border: 1px solid rgb(192, 192, 192); margin-top: 10px; color: black; font-weight: bold; border-radius: 10px">保存</button>
+</form>
+
+::: details 常看源码
+
+```html
+
+<form action="" method="POST" enctype="multipart/form-data">
+    <fieldset>
+        <input type="file" name="icon" multiple="multiple" accept="image/png,image/gif"> // [!code focus]
+    </fieldset>
+    <button>保存</button>
+</form>
+
+```
+
+:::
+
+### 日期域时间
+
+|  属性  |                     说明                     |
+|:----:|:------------------------------------------:|
+| step | 间隔:date 缺省是 1 天，week 缺省是 1 周，month 缺省是 1 月 |
+| min  |                    最小时                     |
+| max  |                    最大时间                    |
+
+**日期选择**
+
+<input type="date" step="5" min="2020-09-22" max="2025-01-15" name="datetime">
+
+::: details 常看源码
+
+```html
+<input type="date" step="5" min="2020-09-22" max="2025-01-15" name="datetime"> 
+```
+
+:::
+
+**周期选择**
+
+<input type="week">
+
+::: details 常看源码
+
+```html
+<input type="week"> 
+```
+
+:::
+
+**月份选择**
+
+<input type="datetime-local" name="datetime"> 
+
+::: details 常看源码
+
+```html
+<input type="datetime-local" name="datetime"> 
+```
+
+:::
+
+### DATALIST
+
+input 表单的输入值选项列表
+
+<form>
+  <input type="text" list="lesson" style="border: 1px solid black; box-shadow: 2px 2px 2px 1px rgb(212,89,141)">
+  <datalist id="lesson">
+    <option value="PHP">后台管理语言</option>
+    <option value="CSS">美化网站页面</option>
+    <option value="MYSQL">掌握数据库使用</option>
+  </datalist>
+</form>
+
+
+```html {4-6}
+<form action="" method="post">
+  <input type="text" list="lesson">
+  <datalist id="lesson">
+    <option value="PHP">后台管理语言</option>
+    <option value="CSS">美化网站页面</option>
+    <option value="MYSQL">掌握数据库使用</option>
+  </datalist>
+</form>
+```
+### autocomplete
+
+浏览器基于之前键入过的值，应该显示出在字段中填写的选项。
+
+```html
+
+<form action="">
+    <input type="search" autocomplete="on" name="content"/>
+    <button>提交</button>
+</form>
+```
+
+## 列表
+
+
