docs: 表单与列表

--- a/docs/基础知识/html/05.表单与列表.md
+++ b/docs/基础知识/html/05.表单与列表.md
@@ -351,4 +351,91 @@ input 表单的输入值选项列表
 
 ## 列表
 
+列表的使用 `word` 等软件的列表概念相似，只不过是应用在网页展示中。
 
+### 有序列表
+
+<ol start="1">
+    <li>php</li>
+    <li>mysql</li>
+    <li>MySql</li>
+</ol>
+
+```html
+
+<style>
+    .li-style1 {
+        /*
+        circle      空心圆
+        disc        实心圆
+        square      实心方块
+        decimal     数字
+        upper-alpha 大写字母
+        lower-alpha 小写字母
+        upper-roman 大写罗马数字
+        lower-roman 小写罗马数字
+         */
+        list-style-type: decimal;
+    }
+
+    .li-style2 {
+        /* 取消风格 */
+        list-style: none;
+    }
+
+    .li-style3 {
+        /*inside 内部 outside 外部（默认）*/
+        list-style-position: inside;
+    }
+</style>
+
+<ol start="1">
+    <li>php</li>
+    <li>mysql</li>
+    <li>MySql</li>
+</ol>
+```
+
+### 无序列表
+
+没有数字编号的列表，可以使用 `css` 定义更多样式，具体请查看`CSS` 章节
+
+<ul>
+	<li>php</li>
+	<li>MySql</li>
+	<li>JavaScript</li>
+</ul>
+
+```html
+
+<ul>
+    <li>php</li>
+    <li>MySql</li>
+    <li>JavaScript</li>
+</ul>
+```
+
+### 描述列表
+
+描述列表指每个列表项有单独的标题
+
+<dl>
+	<dt>开源产品</dt>
+	<dd>hdcms内容管理系统</dd>
+	<dd>hdjs前库组件库</dd>
+	<dt>网站导航</dt>
+	<dd>HOME</dd>
+	<dd>MySQl</dd>
+</dl>
+
+```html
+<dl>
+	<dt>开源产品</dt>
+	<dd>hdcms内容管理系统</dd>
+	<dd>hdjs前库组件库</dd>
+	<dt>网站导航</dt>
+	<dd>HOME</dd>
+	<dd>MySQl</dd>
+</dl>
+
+```
